--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 repositories {
@@ -9,10 +10,25 @@ repositories {
 group 'guru.qa'
 version '1.0'
 
+allure {
+    report {
+        version.set("2.24.0")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.24.0")
+            }
+        }
+    }
+}
+
 dependencies {
     testImplementation (
             'com.codeborne:selenide:6.16.0',
             'com.github.javafaker:javafaker:1.0.2',
+            'io.qameta.allure:allure-selenide:2.23.0',
             'org.junit.jupiter:junit-jupiter:5.9.3',
             'org.slf4j:slf4j-simple:2.0.7'
     )
@@ -20,4 +36,14 @@ dependencies {
 
 test{
     useJUnitPlatform()
+}
+
+task remote_test(type: Test) {
+    useJUnitPlatform{
+        includeTags("remote")
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
