--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,14 @@ task remote_test(type: Test) {
 
 tasks.withType(Test) {
     systemProperties(System.getProperties())
+    useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
 }
 
 tasks.withType(JavaCompile).configureEach {
